@@ -29,6 +29,7 @@ Version 1.3.1+svn:
    * use complex variable substitution almost everywhere
    * new key for [set_variable], literal=, to avoid variable substitution
    * [effect] can now toggle the zoc
+   * new key for [variable], boolean_equals=, to test boolean equality
  * user interface:
    * new sounds for user interface events
  * misceleanous bug fixes
